# LiveVideo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/myb/livevideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/myb/livevideo/: AppConfig.java  LoginActivity.java  MainActivity.java  PermissionChecker.java  VideoListActivity.java
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_video_list.xml  content_video_list.xml
app/src/main/res/menu/: menu_video_list.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/myb/livevideo/: ExampleUnitTest.java
fdkaac/: Android.mk  build.gradle
fdkaac/src/androidTest/java/com/myb/fdkaac/: ExampleInstrumentedTest.java
fdkaac/src/main/: AndroidManifest.xml
fdkaac/src/main/cpp/: FdkAac_jni.cc
fdkaac/src/main/java/com/myb/fdkaac/: AacEncoder.java  FdkAacEncode.java  FdkAacEncoder.java  SoftwareAacEncoder.java
fdkaac/src/test/java/com/myb/fdkaac/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
h264/: CMakeLists.txt  build.gradle
h264/src/androidTest/java/com/myb/mylibrary/: ExampleInstrumentedTest.java
h264/src/main/: AndroidManifest.xml
h264/src/main/cpp/: OpenH264_jni.cc
h264/src/main/java/com/myb/h264/: H264Encoder.java  OpenH264Encoder.java  SoftwareH264Encoder.java
h264/src/test/java/com/myb/mylibrary/: ExampleUnitTest.java
librtmp/: build.gradle
librtmp/src/androidTest/java/com/myb/librtmp/: ExampleInstrumentedTest.java
librtmp/src/main/: AndroidManifest.xml
librtmp/src/main/cpp/: RtmpSession.h  RtmpSession_jni.cc
librtmp/src/main/java/com/myb/librtmp/: RtmpSession.java  RtmpSessionImpl.java
librtmp/src/test/java/com/myb/librtmp/: ExampleUnitTest.java
libyuv/: CMakeLists.txt  build.gradle
libyuv/src/androidTest/java/com/myb/libyuv/: ExampleInstrumentedTest.java
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: YuvI420.h  yuv-jni.cc
libyuv/src/main/java/com/myb/libyuv/: LibYuv.java  YuvUtils.java
libyuv/src/test/java/com/myb/libyuv/: ExampleUnitTest.java
rtmp/: CMakeLists.txt
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/cpp/: SrsRtmp.cpp  SrsRtmp.h  SrsRtmp_jni.cc  srs_librtmp.h
rtmp/src/main/java/com/myb/rtmp/: RtmpSession.java  RtmpSessionImpl.java  SrsRtmp.java
rtmp/src/test/java/com/myb/rtmp/: ExampleUnitTest.java
rtmppush/: CMakeLists.txt  build.gradle
rtmppush/src/androidTest/java/com/myb/rtmppush/: ExampleInstrumentedTest.java
rtmppush/src/main/: AndroidManifest.xml
rtmppush/src/main/cpp/: FdkAac_jni.cc  OpenH264_jni.cc  RtmpSession.cc  RtmpSession.h  RtmpSession_jni.cc
rtmppush/src/main/java/com/myb/rtmppush/: FdkAacEncode.java  OpenH264Encoder.java  RtmpSession.java  RtmpSessionImpl.java  RtmpSessionManager.java  SWVideoEncoder.java
rtmppush/src/main/java/com/myb/rtmppush/ui/: PushActivity.java
rtmppush/src/main/res/layout/: activity_push.xml
rtmppush/src/main/res/values/: strings.xml
rtmppush/src/test/java/com/myb/rtmppush/: ExampleUnitTest.java
srs-rtmp/: build.gradle
srs-rtmp/src/androidTest/java/com/myb/rtmp/: ExampleInstrumentedTest.java
srs-rtmp/src/main/cpp/: SrsRtmp.cpp  SrsRtmp.h  SrsRtmp_jni.cc  srs_librtmp.cpp
srs-rtmp/src/main/java/com/myb/rtmp/: RtmpSessionImpl.java  SrsRtmp.java
